[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "imgur_api"
version = "0.1.0"
[dependencies]
env_logger = "0.4.3"
error-chain = "0.11.0"
futures = "0.1.14"
hyper = "0.11"
hyper-tls = "0.1.2"
log = "0.3.8"
native-tls = "0.1.4"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tokio-core = "0.1.9"
