[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "imgur_api"
version = "0.1.0"

[dependencies]
env_logger = "0.5.3"
error-chain = "0.11.0"
futures = "0.1.18"
hyper = "0.11.15"
hyper-tls = "0.1.2"
log = "0.4.1"
native-tls = "0.1.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio-core = "0.1.12"
